# Proyect_ElectroProgram

./: CMakeLists.txt  ElementosElectronica.cpp  ElementosElectronica.h  Kirchhoff.cpp  Kirchhoff.h  OpAmp.cpp  OpAmp.h  PROYECTOCOMPUMIERCOLES.cpp  Proyecto_JisusCodex  README.md  Resistencias.cpp  Resistencias.h  main.cpp
Proyect_Parcial3/: InterfazCircuitos.py
ProyectoParc3/: InterfazCircuitos.py
parcial 3/: circuitos.py
